--- a/index.html
+++ b/index.html
@@ -108,9 +108,9 @@
 					<br>
 					<input type="radio" name="dataType" value="pid_3" id='pid3'>3 Point Party Identification</input>
 					<br>
-					<input type="radio" name="dataType" value="2016_vote" id='vote2016'>2016 Predisential Election Results</input>
+					<input type="radio" name="dataType" value="2016_vote" id='vote2016'>2016 Presidential Election Results</input>
 					<br>
-					<input type="radio" name="dataType" value="2012_vote" id='vote2012'>2012 Predisential Election Results</input>
+					<input type="radio" name="dataType" value="2012_vote" id='vote2012'>2012 Presidential Election Results</input>
 					<br>
 					<br>
 					<b>Filters</b>
@@ -240,7 +240,6 @@
 								<br>
 							</details>
 						</div>
-						<br>
 						<div style="width: 50%">
 							<details>
 								<summary>
@@ -266,111 +265,136 @@
 								<br>
 							</details>
 						</div>
-						<br>
 						<div style="width: 50%">
-							<h4 style="margin: 0px; padding-top: 15px;">Religion</h4>
-							<input type="checkbox" class="religpew" value="1.0" id="prot">Protestant</input>
-							<br>
-							<input type="checkbox" class="religpew" value="2.0" id="roman">Roman Catholic</input>
-							<br>
-							<input type="checkbox" class="religpew" value="3.0" id="morm">Mormon</input>
-							<br>
-							<input type="checkbox" class="religpew" value="4.0" id="east_or_greek">Eastern or Greek Orthodox</input>
-							<br>
-							<input type="checkbox" class="religpew" value="5.0" id="jew">Jewish</input>
-							<br>
-							<input type="checkbox" class="religpew" value="6.0" id="mus">Muslim</input>
-							<br>
-							<input type="checkbox" class="religpew" value="7.0" id="bud">Buddhist</input>
-							<br>
-							<input type="checkbox" class="religpew" value="8.0" id="hindu">Hindu</input>
-							<br>
-							<input type="checkbox" class="religpew" value="9.0" id="ath">Atheist</input>
-							<br>
-							<input type="checkbox" class="religpew" value="10.0" id="agn">Agnostic</input>
-							<br>
-							<input type="checkbox" class="religpew" value="11.0" id="not">Nothing in Particular</input>
-							<br>
-							<input type="checkbox" class="religpew" value="12.0" id="else">Something Else</input>
-							<br>
+							<details>
+								<summary>
+									<b>
+										Religion
+									</b>
+								</summary>
+								<input type="checkbox" class="religpew" value="1.0" id="prot">Protestant</input>
+								<br>
+								<input type="checkbox" class="religpew" value="2.0" id="roman">Roman Catholic</input>
+								<br>
+								<input type="checkbox" class="religpew" value="3.0" id="morm">Mormon</input>
+								<br>
+								<input type="checkbox" class="religpew" value="4.0" id="east_or_greek">Eastern or Greek Orthodox</input>
+								<br>
+								<input type="checkbox" class="religpew" value="5.0" id="jew">Jewish</input>
+								<br>
+								<input type="checkbox" class="religpew" value="6.0" id="mus">Muslim</input>
+								<br>
+								<input type="checkbox" class="religpew" value="7.0" id="bud">Buddhist</input>
+								<br>
+								<input type="checkbox" class="religpew" value="8.0" id="hindu">Hindu</input>
+								<br>
+								<input type="checkbox" class="religpew" value="9.0" id="ath">Atheist</input>
+								<br>
+								<input type="checkbox" class="religpew" value="10.0" id="agn">Agnostic</input>
+								<br>
+								<input type="checkbox" class="religpew" value="11.0" id="not">Nothing in Particular</input>
+								<br>
+								<input type="checkbox" class="religpew" value="12.0" id="else">Something Else</input>
+								<br>
+							</details>
 						</div>
-						<br>
 						<div style="width: 50%">
-							<h4 style="margin: 0px; padding-top: 15px;">Family Income</h4>
-							<input type="checkbox" class="faminc" value="1.0" id="lt10">Less than $10,000</input>
-							<br>
-							<input type="checkbox" class="faminc" value="2.0" id="ten">$10,000 - $19,999</input>
-							<br>
-							<input type="checkbox" class="faminc" value="3.0" id="twenty">$20,000 - $29,999</input>
-							<br>
-							<input type="checkbox" class="faminc" value="4.0" id="thirty">$30,000 - $39,999</input>
-							<br>
-							<input type="checkbox" class="faminc" value="5.0" id="fourty">$40,000 - $49,999</input>
-							<br>
-							<input type="checkbox" class="faminc" value="6.0" id="fifty">$50,000 - $59,999</input>
-							<br>
-							<input type="checkbox" class="faminc" value="7.0" id="sixty">$60,000 - $69,999</input>
-							<br>
-							<input type="checkbox" class="faminc" value="8.0" id="seventy">$70,000 - $79,999</input>
-							<br>
-							<input type="checkbox" class="faminc" value="9.0" id="eighty">$80,000 - $99,999</input>
-							<br>
-							<input type="checkbox" class="faminc" value="10.0" id="hundred">$100,000 - $119,999</input>
-							<br>
-							<input type="checkbox" class="faminc" value="11.0" id="hundred_20">$120,000 - $149,999</input>
-							<br>
-							<input type="checkbox" class="faminc" value="31.0" id="gt150">$150,000 or more</input>
-							<br>
-							<input type="checkbox" class="faminc" value="12.0" id="hundred_50">$150,000 - $199,999</input>
-							<br>
-							<input type="checkbox" class="faminc" value="13.0" id="two_hundred">$200,000 - $249,999</input>
-							<br>
-							<input type="checkbox" class="faminc" value="14.0" id="two_hundred_50">$250,000 - $349,999</input>
-							<br>
-							<input type="checkbox" class="faminc" value="15.0" id="three_hundred_50">$350,000 - $499,999</input>
-							<br>
-							<input type="checkbox" class="faminc" value="16.0" id="gt500">$500,000 or more</input>
-							<br>
+							<details>
+								<summary>
+									<b>
+										Family Income
+									</b>
+								</summary>
+								<input type="checkbox" class="faminc" value="1.0" id="lt10">Less than $10,000</input>
+								<br>
+								<input type="checkbox" class="faminc" value="2.0" id="ten">$10,000 - $19,999</input>
+								<br>
+								<input type="checkbox" class="faminc" value="3.0" id="twenty">$20,000 - $29,999</input>
+								<br>
+								<input type="checkbox" class="faminc" value="4.0" id="thirty">$30,000 - $39,999</input>
+								<br>
+								<input type="checkbox" class="faminc" value="5.0" id="fourty">$40,000 - $49,999</input>
+								<br>
+								<input type="checkbox" class="faminc" value="6.0" id="fifty">$50,000 - $59,999</input>
+								<br>
+								<input type="checkbox" class="faminc" value="7.0" id="sixty">$60,000 - $69,999</input>
+								<br>
+								<input type="checkbox" class="faminc" value="8.0" id="seventy">$70,000 - $79,999</input>
+								<br>
+								<input type="checkbox" class="faminc" value="9.0" id="eighty">$80,000 - $99,999</input>
+								<br>
+								<input type="checkbox" class="faminc" value="10.0" id="hundred">$100,000 - $119,999</input>
+								<br>
+								<input type="checkbox" class="faminc" value="11.0" id="hundred_20">$120,000 - $149,999</input>
+								<br>
+								<input type="checkbox" class="faminc" value="31.0" id="gt150">$150,000 or more</input>
+								<br>
+								<input type="checkbox" class="faminc" value="12.0" id="hundred_50">$150,000 - $199,999</input>
+								<br>
+								<input type="checkbox" class="faminc" value="13.0" id="two_hundred">$200,000 - $249,999</input>
+								<br>
+								<input type="checkbox" class="faminc" value="14.0" id="two_hundred_50">$250,000 - $349,999</input>
+								<br>
+								<input type="checkbox" class="faminc" value="15.0" id="three_hundred_50">$350,000 - $499,999</input>
+								<br>
+								<input type="checkbox" class="faminc" value="16.0" id="gt500">$500,000 or more</input>
+								<br>
+							</details>
 						</div>
-						<br>
 						<div style="width: 50%">
-							<h4 style="margin: 0px; padding-top: 15px;">3 Point Party Identification</h4>
-							<input type="checkbox" class="pid3" value="1.0" id="dem">Democrat</input>
-							<br>
-							<input type="checkbox" class="pid3" value="2.0" id="rep">Republican</input>
-							<br>
-							<input type="checkbox" class="pid3" value="3.0" id="ind">Independent</input>
-							<br>
-							<input type="checkbox" class="pid3" value="4.0" id="oth_pid3">Other</input>
-							<br>
-							<input type="checkbox" class="pid3" value="5.0" id="ns">Not Sure</input>
-							<br>
+							<details>
+								<summary>
+									<b>
+										3 Point Party Identification
+									</b>
+								</summary>
+								<input type="checkbox" class="pid3" value="1.0" id="dem">Democrat</input>
+								<br>
+								<input type="checkbox" class="pid3" value="2.0" id="rep">Republican</input>
+								<br>
+								<input type="checkbox" class="pid3" value="3.0" id="ind">Independent</input>
+								<br>
+								<input type="checkbox" class="pid3" value="4.0" id="oth_pid3">Other</input>
+								<br>
+								<input type="checkbox" class="pid3" value="5.0" id="ns">Not Sure</input>
+								<br>
+							</details>
 						</div>
-						<br>
 						<div style="width: 50%">
-							<h4 style="margin: 0px; padding-top: 15px;">2016 Presidential Election</h4>
-							<input type="checkbox" class="CC16_410a" value="1.0" id="trump">Donald Trump (Republican)</input>
-							<br>
-							<input type="checkbox" class="CC16_410a" value="2.0" id="clinton">Hillary Clinton (Democrat)</input>
-							<br>
-							<input type="checkbox" class="CC16_410a" value="3.0" id="john">Gary Johnson (Libeertarian)</input>
-							<br>
-							<input type="checkbox" class="CC16_410a" value="4.0" id="stein">Jill Stein (Green)</input>
-							<br>
-							<input type="checkbox" class="CC16_410a" value="8.0" id="mcmul">Evan McMullin (Independent)</input>
-							<br>
-							<input type="checkbox" class="CC16_410a" value="5.0" id="oth_2016">Other</input>
-							<br>
+							<details>
+								<summary>
+									<b>
+										2016 Presidential Election
+									</b>
+								</summary>
+								<input type="checkbox" class="CC16_410a" value="1.0" id="trump">Donald Trump (Republican)</input>
+								<br>
+								<input type="checkbox" class="CC16_410a" value="2.0" id="clinton">Hillary Clinton (Democrat)</input>
+								<br>
+								<input type="checkbox" class="CC16_410a" value="3.0" id="john">Gary Johnson (Libeertarian)</input>
+								<br>
+								<input type="checkbox" class="CC16_410a" value="4.0" id="stein">Jill Stein (Green)</input>
+								<br>
+								<input type="checkbox" class="CC16_410a" value="8.0" id="mcmul">Evan McMullin (Independent)</input>
+								<br>
+								<input type="checkbox" class="CC16_410a" value="5.0" id="oth_2016">Other</input>
+								<br>
+							</details>
 						</div>
-						<br>
-						<div style="width: 50%; padding-top: 15px;">
-							<h4 style="margin: 0px">2012 Presidential Election</h4>
-							<input type="checkbox" class="CC16_326" value="1.0" id="obama">Barack Obama</input>
-							<br>
-							<input type="checkbox" class="CC16_326" value="2.0" id="romney">Mitt Romney</input>
-							<br>
-							<input type="checkbox" class="CC16_326" value="3.0" id="se">Someone Else</input>
-							<br>
+						<div style="width: 50%;">
+							<details>
+								<summary>
+									<b>
+										2012 Presidential Election
+									</b>
+								</summary>
+								<input type="checkbox" class="CC16_326" value="1.0" id="obama">Barack Obama</input>
+								<br>
+								<input type="checkbox" class="CC16_326" value="2.0" id="romney">Mitt Romney</input>
+								<br>
+								<input type="checkbox" class="CC16_326" value="3.0" id="se">Someone Else</input>
+								<br>
+							</details>
 						</div>
 						<br>
 						<div>
