--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 						<summary>
 							<b>Filters</b>
 						</summary>
-					
+
 					<br>
 					<div style="display:flex; flex-direction: row; flex-wrap: wrap;">
 						<div style="width: 50%">
@@ -1421,13 +1421,25 @@
 						var filteredData = [];
 						var keysPushed = [];
 						poliByClass.forEach(function(index){
-							//console.log(index.key)
 							if (parseInt(index.key) <= countFClass){
 								keysPushed.push(index.key)
 								filteredData.push(index)
 							}
 						});
-						dist.push([fClass, filteredData]);
+						var filledData = [];
+						for (i = 1; i <= countFClass; i++){
+							var noBlanks = false;
+							filteredData.forEach(function(index){
+									if (parseInt(index.key) == i){
+										noBlanks = true;
+										filledData.push(index)
+									}
+							});
+							if (!noBlanks){
+								filledData.push({key: i, value: 0});
+							}
+						}
+						dist.push([fClass, filledData]);
 					}
 				});
 			 }
@@ -1444,21 +1456,45 @@
 							.entries(barGroupPoliData);
 						var countFClass = getMapSizeFClass(fClass);
 						var filteredData = [];
-						var keysPushed = [];
 						poliByClass.forEach(function(index){
 							var filteredData1 = [];
-							index.values.forEach(function(index1){
-
-								if (parseInt(index1.key) <= countFClass){
-									keysPushed.push(index1.key)
-									filteredData1.push(index1)
+							for (i = 1; i <= countFClass; i++){
+								var noBlanks = false;
+								index.values.forEach(function(index1){
+									if (parseInt(index1.key) == i){
+										noBlanks = true;
+										index1.key = parseInt(index1.key);
+										filteredData1.push(index1);
+									}
+								});
+								if (!noBlanks){
+									filteredData1.push({key: i, value: 0});
 								}
-							});
+							}
 							index.values = filteredData1;
 							filteredData.push(index);
 						});
+						var countGroupClass = getMapSizeFClass(group);
+						var filledData = [];
+						for (i = 1; i <= countGroupClass; i++){
+							var noBlanks = false;
+							filteredData.forEach(function(index){
+									if (parseInt(index.key) == i){
+										noBlanks = true;
+										index.key = parseInt(index.key)
+										filledData.push(index)
+									}
+							});
+							if (!noBlanks){
+								var missingArry = [];
+								for (j = 1; j <= countFClass; j++){
+									missingArry.push({key: j, value : 0})
+								}
+								filledData.push({key: i, values: missingArry});
+							}
+						}
 
-						dist.push([fClass, filteredData]);
+						dist.push([fClass, filledData]);
 					}
 				});
 		 	}
@@ -1466,12 +1502,26 @@
 		}
 
 		function groupedMapPoliDataCt(data, group){
+			var countFClass = getMapSizeFClass(group);
 			var poliByGroup = d3.nest()
 				.key(function(d) { return d[group]; })
 				.rollup(function(v) { return v.length; })
 				.sortKeys(d3.ascending)
 				.entries(data);
-			return poliByGroup;
+			var filledData = [];
+			for (i = 1; i <= countFClass; i++){
+				var noBlanks = false;
+				poliByGroup.forEach(function(index){
+						if (parseInt(index.key) == i){
+							noBlanks = true;
+							filledData.push(index)
+						}
+				});
+				if (!noBlanks){
+					filledData.push({key: i, value: 0});
+				}
+			}
+			return filledData;
 		}
 
 		function removeMissingData(data, col){
@@ -1550,7 +1600,6 @@
 						var poliByPop = groupedBarChartDist(data, "pop");
 
 						dsBarChart(maxPops, "pop");
-						//console.log(poliByPop)
 
 						var fClasses = poliByPop.map(function(value,index) { return value[0]; });
 
@@ -1570,10 +1619,8 @@
 							selectValue = d3.select('select').property('value');
 							barPopSVG.selectAll("*").remove();
 							poliByPop.forEach(function(fClassData){
-		 						//console.log(fClassData);
 								if (fClassData[0] == selectValue){
 									dsPopBarChart(fClassData[1], selectValue);
-									//dsGroupedBarChart(fClassData[1], "pid3", "gender");
 								}
 			 				});
 						};
@@ -1632,10 +1679,8 @@
 							selectValue = d3.select('select').property('value');
 							barPopSVG.selectAll("*").remove();
 							poliByPop.forEach(function(fClassData){
-								//console.log(fClassData);
 								if (fClassData[0] == selectValue){
 									dsPopBarChart(fClassData[1], selectValue);
-									//dsGroupedBarChart(fClassData[1], "pid3", "gender");
 								}
 							});
 						};
@@ -1672,10 +1717,8 @@
 							selectValue = d3.select('select').property('value');
 							barGroupSVG.selectAll("*").remove();
 							poliByPidClasses.forEach(function(fClassData){
-		 						//console.log(fClassData);
 								if (fClassData[0] == selectValue){
 									dsGroupedBarChart(fClassData[1], "pid3", selectValue);
-									//dsGroupedBarChart(fClassData[1], "pid3", "gender");
 								}
 			 				});
 						};
@@ -1714,10 +1757,8 @@
 							selectValue = d3.select('select').property('value');
 							barGroupSVG.selectAll("*").remove();
 							poliByVote2016Classes.forEach(function(fClassData){
-								//console.log(fClassData);
 								if (fClassData[0] == selectValue){
 									dsGroupedBarChart(fClassData[1], "CC16_410a", selectValue);
-									//dsGroupedBarChart(fClassData[1], "pid3", "gender");
 								}
 							});
 						};
@@ -1755,10 +1796,8 @@
 							selectValue = d3.select('select').property('value');
 							barGroupSVG.selectAll("*").remove();
 							poliByVote2012Classes.forEach(function(fClassData){
-								//console.log(fClassData);
 								if (fClassData[0] == selectValue){
 									dsGroupedBarChart(fClassData[1], "CC16_326", selectValue);
-									//dsGroupedBarChart(fClassData[1], "pid3", "gender");
 								}
 							});
 						};
@@ -1769,13 +1808,11 @@
 								dsGroupedBarChart(fClassData[1], "CC16_326", firstFClass);
 							}
 						});
-						//console.log(poliByVote2012)
 				}
 			}
 
 			function percentifyBarData(data){
 				var perList = [];
-				//console.log(data);
 				var sum = data.map(item => item.value).reduce((prev, next) => prev + next);
 				data.forEach(function(index){
 					index.value = +((100*index.value/sum).toFixed(2));
@@ -2019,7 +2056,6 @@
 					index.values = perList1;
 					perList.push(index);
 				 });
-			 //console.log(perList)
 			 return perList;
 			}
 
